[gd_scene load_steps=21 format=2]

[ext_resource path="res://MonsterAction.tscn" type="PackedScene" id=1]
[ext_resource path="res://Monster.tscn" type="PackedScene" id=2]
[ext_resource path="res://BattleScene.gd" type="Script" id=3]
[ext_resource path="res://PlayerHand.gd" type="Script" id=4]
[ext_resource path="res://UI_Art/Border_Art.png" type="Texture" id=5]
[ext_resource path="res://UI_Art/Separator_Art.png" type="Texture" id=6]
[ext_resource path="res://UI_Art/player_health_fill.png" type="Texture" id=7]
[ext_resource path="res://UI_Art/Player_Art.png" type="Texture" id=8]
[ext_resource path="res://UI_Art/player_health_empty.png" type="Texture" id=9]
[ext_resource path="res://fonts/Minecraft.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://UI_Art/enemy_health_empty.png" type="Texture" id=11]
[ext_resource path="res://UI_Art/Action_Arrow.png" type="Texture" id=12]
[ext_resource path="res://UI_Art/Action_Empty.png" type="Texture" id=13]
[ext_resource path="res://UI_Art/Action_Fill.png" type="Texture" id=14]
[ext_resource path="res://UI_Art/enemy_health_fill.png" type="Texture" id=15]
[ext_resource path="res://UI_Art/Major_Potion_mana.png" type="Texture" id=16]
[ext_resource path="res://UI_Art/Major_Potion_empty.png" type="Texture" id=17]
[ext_resource path="res://UI_Art/Major_Potion_green.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 128
font_data = ExtResource( 10 )

[node name="BattleSceneNew" type="Node"]
script = ExtResource( 3 )
monster_scene = ExtResource( 2 )
monster_action = ExtResource( 1 )

[node name="SceneBackground" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 192, 192 )
patch_margin_left = 61
patch_margin_top = 65
patch_margin_right = 60
patch_margin_bottom = 63

[node name="PlayerSide" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1584.0
margin_top = 16.0
margin_right = -712.0
margin_bottom = -20.0
__meta__ = {
"_edit_group_": true
}

[node name="PlayerMargins" type="MarginContainer" parent="PlayerSide"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 30
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="PlayerLayout" type="GridContainer" parent="PlayerSide/PlayerMargins"]
margin_left = 20.0
margin_top = 30.0
margin_right = 852.0
margin_bottom = 844.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10

[node name="GridContainer" type="GridContainer" parent="PlayerSide/PlayerMargins/PlayerLayout"]
margin_right = 832.0
margin_bottom = 604.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerSide/PlayerMargins/PlayerLayout/GridContainer"]
margin_right = 200.0
margin_bottom = 604.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 10

[node name="PlayerPicture" type="TextureRect" parent="PlayerSide/PlayerMargins/PlayerLayout/GridContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 172.0
texture = ExtResource( 8 )
stretch_mode = 4

[node name="TextureProgress" type="TextureProgress" parent="PlayerSide/PlayerMargins/PlayerLayout/GridContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 200.0
margin_bottom = 214.0
rect_min_size = Vector2( 0, 32 )
value = 75.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 7 )
nine_patch_stretch = true

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerSide/PlayerMargins/PlayerLayout/GridContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 200.0
margin_bottom = 256.0

[node name="Label_HP" type="Label" parent="PlayerSide/PlayerMargins/PlayerLayout/GridContainer/VBoxContainer/HBoxContainer"]
margin_right = 44.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "HP"

[node name="Label_PlayerHealth" type="Label" parent="PlayerSide/PlayerMargins/PlayerLayout/GridContainer/VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 200.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "100"
align = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PlayerSide/PlayerMargins/PlayerLayout/GridContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 200.0
margin_bottom = 298.0

[node name="Label_Attack" type="Label" parent="PlayerSide/PlayerMargins/PlayerLayout/GridContainer/VBoxContainer/HBoxContainer2"]
margin_right = 128.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "ATTACK"

[node name="Label_PlayerAttack" type="Label" parent="PlayerSide/PlayerMargins/PlayerLayout/GridContainer/VBoxContainer/HBoxContainer2"]
margin_left = 132.0
margin_right = 200.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2

[node name="PicrossContainer" type="ColorRect" parent="PlayerSide/PlayerMargins/PlayerLayout/GridContainer"]
margin_left = 204.0
margin_right = 832.0
margin_bottom = 604.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.45098, 0.611765, 1, 1 )

[node name="PlayerHandContainer" type="HBoxContainer" parent="PlayerSide/PlayerMargins/PlayerLayout"]
margin_top = 614.0
margin_right = 832.0
margin_bottom = 814.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1
script = ExtResource( 4 )

[node name="Separator" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 80.0
margin_right = 128.0
texture = ExtResource( 6 )
patch_margin_top = 47
patch_margin_bottom = 48

[node name="EnemySide" type="Control" parent="."]
anchor_bottom = 1.0
margin_left = 928.0
margin_top = 26.0
margin_right = 1544.0
margin_bottom = -52.0
__meta__ = {
"_edit_group_": true
}

[node name="MarginContainer" type="MarginContainer" parent="EnemySide"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 35
custom_constants/margin_top = 30
custom_constants/margin_left = 35
custom_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="EnemySide/MarginContainer"]
margin_left = 35.0
margin_top = 30.0
margin_right = 631.0
margin_bottom = 802.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_constants/vseparation = 20
custom_constants/hseparation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="EnemySide/MarginContainer/GridContainer"]
margin_right = 596.0
margin_bottom = 262.0
size_flags_horizontal = 7
custom_constants/separation = 10

[node name="level_text" type="Label" parent="EnemySide/MarginContainer/GridContainer/VBoxContainer"]
margin_right = 596.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 2

[node name="HBoxContainer" type="HBoxContainer" parent="EnemySide/MarginContainer/GridContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 596.0
margin_bottom = 74.0

[node name="Label_monster_hp" type="Label" parent="EnemySide/MarginContainer/GridContainer/VBoxContainer/HBoxContainer"]
margin_right = 44.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "HP"
valign = 2

[node name="Label_monster_health" type="Label" parent="EnemySide/MarginContainer/GridContainer/VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 596.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "100/100"
align = 2
valign = 2

[node name="MonsterHealthProgress" type="TextureProgress" parent="EnemySide/MarginContainer/GridContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 596.0
margin_bottom = 116.0
value = 25.0
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 15 )
nine_patch_stretch = true
stretch_margin_bottom = 32

[node name="MonsterName" type="Label" parent="EnemySide/MarginContainer/GridContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 596.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 2 )
text = "Deadly Dodo Bird"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="EnemySide/MarginContainer/GridContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 596.0
margin_bottom = 252.0
custom_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="EnemySide/MarginContainer/GridContainer/VBoxContainer/HBoxContainer2"]
margin_right = 168.0
margin_bottom = 84.0
custom_constants/separation = 20

[node name="Label_Attack" type="Label" parent="EnemySide/MarginContainer/GridContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 168.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "ATTACK"

[node name="Label_Weakness" type="Label" parent="EnemySide/MarginContainer/GridContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 52.0
margin_right = 168.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
text = "WEAKNESS"

[node name="VBoxContainer2" type="VBoxContainer" parent="EnemySide/MarginContainer/GridContainer/VBoxContainer/HBoxContainer2"]
margin_left = 218.0
margin_right = 292.0
margin_bottom = 84.0
custom_constants/separation = 20

[node name="Label_EnemyAttack" type="Label" parent="EnemySide/MarginContainer/GridContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 74.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Label_EnemyWeakness" type="Label" parent="EnemySide/MarginContainer/GridContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 52.0
margin_right = 74.0
margin_bottom = 84.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Light"

[node name="HBoxContainer3" type="HBoxContainer" parent="EnemySide/MarginContainer/GridContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 596.0
margin_bottom = 262.0
custom_constants/separation = 50

[node name="MonsterContainer" type="Control" parent="EnemySide/MarginContainer/GridContainer"]
margin_top = 282.0
margin_right = 596.0
margin_bottom = 704.0
size_flags_horizontal = 7
size_flags_vertical = 3

[node name="MonsterActions" type="HBoxContainer" parent="EnemySide/MarginContainer/GridContainer"]
margin_top = 724.0
margin_right = 596.0
margin_bottom = 772.0
size_flags_horizontal = 7
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="Action_1" type="TextureProgress" parent="EnemySide/MarginContainer/GridContainer/MonsterActions"]
margin_right = 128.0
margin_bottom = 48.0
value = 50.0
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 14 )

[node name="Label_action" type="Label" parent="EnemySide/MarginContainer/GridContainer/MonsterActions/Action_1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Attack"
align = 1
valign = 1

[node name="Action_1_arrow" type="TextureRect" parent="EnemySide/MarginContainer/GridContainer/MonsterActions"]
margin_left = 132.0
margin_right = 152.0
margin_bottom = 48.0
texture = ExtResource( 12 )
stretch_mode = 6

[node name="Action_2" type="TextureProgress" parent="EnemySide/MarginContainer/GridContainer/MonsterActions"]
margin_left = 156.0
margin_right = 284.0
margin_bottom = 48.0
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 14 )

[node name="Label_action" type="Label" parent="EnemySide/MarginContainer/GridContainer/MonsterActions/Action_2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Idle"
align = 1
valign = 1

[node name="Action_2_arrow" type="TextureRect" parent="EnemySide/MarginContainer/GridContainer/MonsterActions"]
margin_left = 288.0
margin_right = 308.0
margin_bottom = 48.0
texture = ExtResource( 12 )
stretch_mode = 6

[node name="Action_3" type="TextureProgress" parent="EnemySide/MarginContainer/GridContainer/MonsterActions"]
margin_left = 312.0
margin_right = 440.0
margin_bottom = 48.0
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 14 )

[node name="Label_action" type="Label" parent="EnemySide/MarginContainer/GridContainer/MonsterActions/Action_3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Idle"
align = 1
valign = 1

[node name="Action_3_arrow" type="TextureRect" parent="EnemySide/MarginContainer/GridContainer/MonsterActions"]
margin_left = 444.0
margin_right = 464.0
margin_bottom = 48.0
texture = ExtResource( 12 )
stretch_mode = 6

[node name="Action_4" type="TextureProgress" parent="EnemySide/MarginContainer/GridContainer/MonsterActions"]
margin_left = 468.0
margin_right = 596.0
margin_bottom = 48.0
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 14 )

[node name="Label_action" type="Label" parent="EnemySide/MarginContainer/GridContainer/MonsterActions/Action_4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Idle"
align = 1
valign = 1

[node name="PowerUp" type="TextureButton" parent="."]
margin_left = 52.0
margin_top = 376.0
margin_right = 202.0
margin_bottom = 526.0
disabled = true
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 18 )
texture_disabled = ExtResource( 17 )
expand = true
stretch_mode = 4

[node name="VictoryDefeatLabel" type="Label" parent="."]
visible = false
anchor_left = -0.18
anchor_right = 0.553
margin_left = 288.0
margin_right = 715.2
margin_bottom = 900.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 800, 450 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "VICTORY!!!"
align = 1
valign = 1
